<resources>
    <string name="app_name">LayoutsEjer1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ejercicios de Layouts</string>
    <string name="nav_header_subtitle">Carlos Sebastian Madrigal Rodriguez</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_table">Table</string>
    <string name="menu_relative">Relative</string>
    <string name="menu_frame">Frame</string>
    <string name="menu_absolute">Absolute</string>
    <string name="menu_linear">Linear</string>
    <string-array name="diasItems">
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miercoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
    </string-array>
    <string-array name="horaItems">
        <item>8:00</item>
        <item>9:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
    </string-array>
</resources>